[tool.poetry]
name = "pandas-lab"
version = "0.1.0"
description = ""
authors = ["NOOR OMARI <nooromari847@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "^3.0.16"
numpy = "^1.20.3"
matplotlib = "^3.4.2"
pandas = "^1.2.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
poetry = "^1.1.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
